# fastapi-phoinix

./: .env  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: cache.py  main.py
app/core/: config.py
app/routers/: api.py
