[tool.poetry]
name = "phoinix"
version = "0.1.0"
description = ""
authors = ["kaija <kaija.chang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
redis = "^3.5.3"
click = "^7.1.2"
SQLAlchemy = "^1.4.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."app.modules"]
"setting" = "api.setting"
